# justfile-demo

./: CMakeLists.txt  Justfile  README.md
include/demo/: demo.h
src/: main.cpp
test/: main.cpp
